# distgen

./: .gitattributes  .gitignore  404.html  MANIFEST.in  README.md  beam.py  dist.ipynb  dist.py  environment-dev.yml  environment.yml  generator.py  index.html  index.md  laser.prof.example.txt  mkdocs.yml  objects.inv  pdf.test.pagex.in.yaml  plot.py  plotting.py  pydistgen.py  pyproject.toml  reader.py  requirements.txt  setup.cfg  setup.py  sitemap.xml  test.out.txt  test2.txt  tools.py  versioneer.py  writers.py
.github/workflows/: gh-pages.yml  unit-tests.yml
distgen/:    __init__.py  _version.py  archive.py  beam.py  command_line.py  dist.py  dowell_schmerge.py  dowell_schmerge_cathode_model.py  drivers.py  fermi_dirac_3step_barrier_photocathode_model.py  generator.py  generator_devel.ipynb  hammersley.py  laser_speckle.py  metrics.py  parsing.py  physical_constants.py  plot.py  pydistgen.py  reader.py  tools.py  transforms.py  writers.py
distgen/tests/: conftest.py  test_beam.py  test_dist.py  test_import.py
docs/: installation.md
drivers/: DistGen.py  drivers.py
examples/: KEdist.txt  basic.ipynb  beer.can.in.json  conversion_examples.ipynb  dist.ipynb  example_dists.ipynb  image_tests.ipynb  metrics.ipynb  rad.file.in.json  rad.gaussian.in.json  test.in.txt  test.py  text_ion_file.ion  transforms.ipynb
installation/: index.html
old/: requirements.txt
regression_tests/: beam.ipynb  checker.test.dist.txt  correlations.ipynb  dist.ipynb  dist_tests.ipynb  test1.txt
scripts/: execute_notebooks.bash
search/: search_index.json
(+239 files in other folders)
