[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=60",
  "setuptools_scm[toml]>=8.0"
]

[project]
authors = [
  {name="Colwyn Gulliford"},
]
classifiers = [
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
]

dependencies = ["scipy",
                "matplotlib",
                "h5py",
                "pint",
                "pyyaml",
                "openpmd-beamphysics",
                "lume-base",
                "pydicom",
                "numpy>=2",
]

description = "Tools for creating macroparticle distributions for accelerators"
dynamic = [ "version" ]
keywords = []
name = "distgen"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.9,<3.13"

[project.urls]
Homepage = "https://github.com/ColwynGulliford/distgen"

[options]
zip_safe = false
include_package_data = true

[tool.setuptools.packages.find]
where = ["."]
include = [ "distgen*", ]
namespaces = false

[project.license]
file = "LICENSE"

[tool.ruff]
# select = []
# ignore = []

[tool.setuptools_scm]
version_file = "distgen/_version.py"
